# devtools_scicomp_project_2025

./: .buildinfo  .gitignore  CMakeLists.txt  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyclassify.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  formatter.yml  tests.yml
_sources/: index.rst.txt  pyclassify.rst.txt
docs/: Documentation.ipynb  conf.py  index.rst  pyclassify.rst
experiments/: config.yaml  config_accuracy.yaml  config_numpy.yaml  config_profiling.yaml  config_spambase.yaml
logs/: numpy_knn_classifier.txt  slow_knn_classifier.txt  spam_numba_knn_classifier.txt  spam_numpy_knn_classifier.txt
scripts/: mpi_running.py  parallel_tridiag_eigen.py  plot_scalability.py  profiling.py  profiling_memory.py  profiling_memory_and_time.py  profiling_solver.py  run.py  scalability.py
shell/: load_modules.sh  profile.sh  scalability.sh  submit.sbatch  submit.sh  test.sh  time_profile.sh
src/pyclassify/: CMakeLists.txt  QR_alg_Wilkison.cpp  QR_bindings.cpp  __init__.py  classifier.py  cxx_utils.cpp  datamodule.py  eigenvalues.py  helpers_secular.py  model.py  module.py  parallel_tridiag_eigen.py  profiling_MPI.py  prova.py  utils.py  zero_finder.py  zero_founder.py
test/: test_.py  test_eigensolvers.py  test_helpers_secular.py  test_utils.py  test_zero_finder.py
