# Choosing a build backend:
[build-system]
requires = ["setuptools", "cmake", "scikit-build", "ninja", "pybind11"]
build-backend = "setuptools.build_meta"


[project]
name = "pyclassify"
version = "0.0.1"
description = "Project for the Development Tools for Scientific Computing course"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "Lorenzo Tomada", email = "ltomada@sissa.it" },
    { name = "Gaspare Li Causi", email = "glicausi@sissa.it" }
]
dynamic = ["dependencies"]

[tool.scikit-build]
build-dir = "build"


[tool.setuptools.packages.find]
where = ["src"]
exclude = ["scripts", "tests", "shell", "experiments"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
test = ["pytest"]

